@@ -946,9 +946,10 @@ gboolean on_curves_y_entry_focus_out_event(GtkWidget *widget, GdkEvent *event,
 }
 
 void on_curves_preview_toggled(GtkToggleButton *button, gpointer user_data) {
+	cancel_pending_update();
 	if (!gtk_toggle_button_get_active(curves_preview_check)) {
-		copy_backup_to_gfit();
-		redraw(REMAP_ALL);
+		waiting_for_thread();
+		siril_preview_hide();
 	} else {
 		copy_gfit_to_backup();
 		curves_update_image();
