@@ -5,6 +5,7 @@ XX/XX/XX
 * Fixed wrong interpretation of bayer pattern after a background extraction on CFA images (#1799)
 * Fixed unnecessary range clipping/scaling prior to RGB channel extraction (#1797)
 * Fixed issue with sequence filename construction if com.pref.ext didn't match the seq (#1796)
+* Fixed issue where curves tool preview could fail to disapply (#1801)
 
 siril 1.4.0-beta4
 09/28/25
